<resources>
    <string name="app_name">ExercicioFirebase</string>
    <string name="register_now">Criar nova conta!</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="text_login">ENTRAR</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Registrar</string>
    <string name="name">Nome</string>
    <string name="exit">Sair</string>

</resources>